--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "input-otp": "^1.4.2",
     "lottie-web": "^5.13.0",
     "lucide-react": "^0.542.0",
+    "motion": "^12.23.12",
     "next": "15.5.2",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.9.0",
