--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "google-auth-library": "^10.3.0",
     "google-spreadsheet": "^5.0.2",
     "googleapis": "^159.0.0",
+    "html2canvas-pro": "^1.5.11",
     "input-otp": "^1.4.2",
     "lottie-web": "^5.13.0",
     "lucide-react": "^0.542.0",
